Fixes #743: Change the medical coding module to get all coding fields for a dictionary. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@895 14881f01-568e-124b-961a-bb94932aa8d1

--- a/medical-coding/pom.xml
+++ b/medical-coding/pom.xml
@@ -32,6 +32,19 @@
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-all</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz-oracle</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
