--- a/pom.xml
+++ b/pom.xml
@@ -556,6 +556,11 @@
 				<artifactId>commons-httpclient</artifactId>
 				<version>3.1</version>
 			</dependency>
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>2.2.4</version>
+            </dependency>
 	    </dependencies>
     </dependencyManagement>
 
